# cppemacs

./: .gitignore  CMakeLists.txt  GFDL-1_83-or-later.html  README.md  all_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  conceptcppemacs_1_1from__emacs__convertible.html  conceptcppemacs_1_1to__emacs__convertible.html  concepts.html  concepts.js  conversions_8hpp_source.html  core_8hpp_source.html  cppemacs.css  dir_49e56c817e5e54854c35e136979f97ca.html  dir_77c33839815b7c6c2ca556064fb28352.html  dir_cea0492b24b500452db5e87313b961a2.html  dir_cea0492b24b500452db5e87313b961a2.js  dir_cea0492b24b500452db5e87313b961a2_dep.map  dir_cea0492b24b500452db5e87313b961a2_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  graph_legend.html  group__Conversions.html  group__Conversions.js  group__Core.html  group__Core.js  group__Utilities.html  group__Utilities.js  group__cppemacs__conversions.html  group__cppemacs__conversions.js  group__cppemacs__conversions.map  group__cppemacs__conversions.md5  (+197 more)
.github/scripts/: install-emacs  install-emacs.ps1
.github/workflows/: docs.yaml  test.yaml
cmake/: FindEmacs.cmake  config.in.cmake
cppemacs/: conversions.hpp  core.hpp  literals.hpp  utils.hpp
docs/: CMakeLists.txt  header.html  layout.xml
docs/examples/: brief_example.cpp  core_examples.cpp  hello_world.cpp  utils_examples.cpp
include/cppemacs/: all.hpp  conversions.hpp  core.hpp  literals.hpp  utils.hpp
scripts/: Makefile  check-license-spec.el  check-license.el  license-header-gfdl.txt  license-header.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  concepts_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+42 more)
tests/: CMakeLists.txt  common.hpp  listeners.cpp  main.cpp  test.el  test_conversions.cpp  test_exceptions.cpp  test_inst_all.cpp  test_user_ptr.cpp  test_vector.cpp
tests/test_subproject_include/: CMakeLists.txt  README.md
tests/test_system_install/: CMakeLists.txt  README.md
